# bbnf-lang

./: .gitignore  CLAUDE.md  Makefile  README.md  package-lock.json  package.json
extension/: CLAUDE.md  package-lock.json  package.json
extension/src/: extension.ts
extension/syntaxes/: bbnf.tmLanguage.json
grammar/: BBNF.md  CLAUDE.md  PROGRESS.md  about.md  css-color.bbnf  css-keyframes.bbnf  css-selectors.bbnf  css-value-unit.bbnf  css-values.bbnf
grammar/css/: css-selectors.bbnf  css-values.bbnf
playground/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
playground/public/: 404.html
playground/src/: App.vue  env.d.ts  main.ts
playground/src/assets/styles/: main.css
playground/src/components/docs/: DocsSidebar.vue
playground/src/components/editors/: MonacoEditor.vue  bbnfMonarch.ts
playground/src/components/landing/: DemoCards.vue  FeatureCards.vue  FooterSection.vue  HeroSection.vue  LivePreviewStrip.vue  TypewriterText.vue
playground/src/components/layout/: ControlsBar.vue  NavBar.vue
playground/src/components/ui/: InlineRichText.vue
playground/src/components/walkthrough/: WalkthroughControls.vue  WalkthroughOverlay.vue
playground/src/composables/: useDocs.ts  useExamples.ts  useHeroState.ts  useLanguageProvider.ts  useMarkdown.ts  useMouseParallax.ts  usePipeline.ts  useScrollMorph.ts  useScrollTimeline.ts  useSectionTheme.ts  useTypewriter.ts  useWalkthrough.ts
playground/src/composables/examples/: bbnf.ts  css.ts  hello.ts  index.ts  json.ts  math.ts
playground/src/composables/wasm/: index.ts  loader.ts  types.ts
playground/src/demos/: bbnf-grammar.ts  error-recovery.ts  index.ts  json-parser.ts  pretty-printing.ts  types.ts
playground/src/docs/bbnf/: api-reference.md  operators.md  (+4 more)
playground/src/lib/: monacoWorkers.ts
playground/src/router/: index.ts
playground/src/views/: DocsPage.vue  LandingPage.vue  PlaygroundPage.vue
playground/src/wasm/: bbnf_wasm.d.ts  bbnf_wasm.js  bbnf_wasm_bg.wasm  bbnf_wasm_bg.wasm.d.ts  package.json
prettier-plugin-bbnf/: CLAUDE.md
prettier-plugin-bbnf/test/: format.test.ts
rust/: CLAUDE.md  Cargo.toml
rust/bbnf/: CLAUDE.md  Cargo.toml
rust/bbnf-analysis/: Cargo.toml
rust/bbnf-analysis/src/: analysis.rs  lib.rs
rust/bbnf-analysis/src/features/: code_actions.rs  code_lens.rs  completion.rs  document_symbols.rs  folding.rs  formatting.rs  goto_definition.rs  hover.rs  inlay_hints.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs
rust/bbnf-analysis/src/state/: ast_utils.rs  diagnostics.rs  mod.rs  parsing.rs  pretty.rs  types.rs
rust/bbnf-derive/: CLAUDE.md  Cargo.toml
rust/bbnf-derive/src/: lib.rs  span_codegen.rs
rust/bbnf/src/: analysis.rs  grammar.rs  imports.rs  lib.rs  optimize.rs  types.rs
rust/bbnf/src/analysis/: charset.rs  deps.rs  dispatch.rs  first_sets.rs  metadata.rs  mod.rs  regex_first.rs  scc.rs
rust/bbnf/src/generate/: alternation.rs  codegen.rs  concatenation.rs  mod.rs  patterns.rs  prettify.rs  type_inference.rs  types.rs
rust/bbnf/src/generate/prettify/: heuristics.rs  hints.rs  mod.rs  prettify_utils.rs
rust/bbnf/tests/: analysis.rs  imports.rs  optimize.rs  recover.rs
rust/bbnf/tests/common/: mod.rs
rust/lsp/: CLAUDE.md  Cargo.toml
rust/lsp/src/: analysis.rs  main.rs  server.rs  state.rs
rust/lsp/src/features/: code_actions.rs  code_lens.rs  completion.rs  document_symbols.rs  folding.rs  formatting.rs  goto_definition.rs  hover.rs  inlay_hints.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs
rust/lsp/src/server/: imports.rs  mod.rs  protocol.rs
rust/lsp/src/state/: ast_utils.rs  diagnostics.rs  mod.rs  parsing.rs  pretty.rs  types.rs
rust/lsp/tests/: integration.rs
typescript/: CLAUDE.md  package-lock.json  package.json  vite.config.ts
typescript/src/: analysis.ts  first-sets.ts  generate.ts  grammar.ts  imports.ts  index.ts  optimize.ts  parse.ts  types.ts
typescript/src/analysis/: charset.ts  deps.ts  dispatch.ts  first-sets.ts  index.ts  metadata.ts  regex-first.ts  scc.ts
typescript/src/prettify/: heuristics.ts  hints.ts  index.ts  interpreter.ts  patterns.ts
typescript/test/: analysis.test.ts  bbnf.test.ts  css-stylesheet.test.ts  first-sets.test.ts  imports.test.ts  optimize.test.ts  recover.test.ts
typescript/test/helpers/: ast-builders.ts
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: lib.rs
(+29 files in other folders)
