[package]
name = "bbnf_derive"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Derive macro for generating parsers from BBNF grammars"
repository = "https://github.com/mkbabb/bbnf-lang"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
bbnf = { version = "0.1.1", path = "../bbnf" }
pprint = "0.3.1"
parse_that = "0.1.1"

syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
indexmap = "2"
