[package]
name = "bbnf"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "BBNF grammar parser and code generator built on parse_that"
repository = "https://github.com/mkbabb/bbnf-lang"

[lib]
name = "bbnf"
path = "src/lib.rs"

[dependencies]
pprint = "0.3.1"
parse_that = "0.1.1"

regex = { version = "1.11", features = ["perf"] }

syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
indexmap = "2"

[dev-dependencies]
tempfile = "3"
