[package]
name = "bbnf-lsp"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Language server for BBNF grammar files"

[[bin]]
name = "bbnf-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bbnf = { version = "0.2.0", path = "../bbnf" }
bbnf-analysis = { version = "0.1.0", path = "../bbnf-analysis" }

